--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-new/water-quality-inspection-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-new/water-quality-inspection-new.component.html
@@ -27,7 +27,7 @@
 
     <form (ngSubmit)="onSubmit(addWaterQualityInspectionForm)" #addWaterQualityInspectionForm="ngForm" class="container">
 
-        <zybach-water-quality-inspection-upsert #inspectionUpsertForm
+        <zybach-water-quality-inspection-upsert #inspectionUpsertForm (isFormValid)="isInspectionUpsertFormValid($event)"
         [(inspection)]="inspection">
         </zybach-water-quality-inspection-upsert >
 
@@ -35,7 +35,8 @@
             <div class="col-sm text-left float-right">
                 <i class="fas fa-bolt"></i> Required field
             </div>
-            <button type="submit" class="btn btn-zybach mr-1">
+            <button type="submit" class="btn btn-zybach mr-1"
+                [disabled]="isFormValid(addWaterQualityInspectionForm)">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 Save
             </button>
