missing colon in TRS field

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -75,7 +75,7 @@
                                 <div class="col-12  col-sm-6" [innerHtml]="getWellOwner()"></div>
                                 <div class="col-12  col-sm-6 label"><strong>Additional Contact: </strong></div>
                                 <div class="col-12  col-sm-6" [innerHtml]="getWellAdditionalContact()"></div>
-                                <div class="col-12  col-sm-6 label"><strong>Township, Range, Section </strong></div>
+                                <div class="col-12  col-sm-6 label"><strong>Township, Range, Section:</strong></div>
                                 <div class="col-12  col-sm-6">{{well.TownshipRangeSection}}</div>
                                 <div class="col-12  col-sm-6 label"><strong>County: </strong></div>
                                 <div class="col-12  col-sm-6">{{well.County}}</div>
