fixed wording on new inspection component, added include to make sure CPAR gets inspection failure reason on detailed dto

--- a/Source/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
@@ -26,8 +26,8 @@
 
     <div class="row mt-2">
         <div class="col-12">
-            <p>Add a chemigation inspection record for #{{annualRecord?.ChemigationPermit.ChemigationPermitNumberDisplay}} for {{annualRecord?.RecordYear}} using the form below
-            </p>
+            <p>Add a chemigation inspection record for Permit #{{annualRecord?.ChemigationPermit.ChemigationPermitNumberDisplay}} for {{annualRecord?.RecordYear}} using the form below
+            </p> 
         </div>
     </div>
 
