adding a sort to the grid custom-dropdown-filter.component

--- a/Source/Zybach.Web/src/app/shared/components/custom-dropdown-filter/custom-dropdown-filter.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/custom-dropdown-filter/custom-dropdown-filter.component.html
@@ -6,7 +6,7 @@
         <label for="deselect">Deselect All</label>
     </div>
     <div id="filter-options" class="pt-2 pl-2">
-        <div *ngFor="let element of dropdownValues">
+        <div *ngFor="let element of getDropdownValues()">
             <input type="checkbox" name="{{element}}" [(ngModel)]="state[element]" (ngModelChange)="updateFilter()" checked>
             <label for="{{element}}" class="ml-2">{{element}}</label>
         </div>
