--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -536,7 +536,7 @@
                                         
                                         <div *ngIf="isFirst" class="row col-6 mt-3 mr-3">
                                             <a class="btn btn-zybach btn-md mt-3 mr-3"
-                                            routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/{{inspection.ChemigationInspectionID}}/edit">
+                                            routerLink="/chemigation-inspections/{{inspection.ChemigationInspectionID}}">
                                             <span class="fas fa-edit"></span> Edit Inspection
                                             </a>
                                             
