ClearingHouse -> Clearinghouse added that to WQI grid

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -175,7 +175,7 @@
                                 <div class="col-12 col-sm-6">
                                     <div class="row">
                                         <div class="col-12 col-sm-6 label"><strong>Clearinghouse ID: </strong></div>
-                                        <div class="col-12 col-sm-6">{{well.ClearingHouse}}</div>
+                                        <div class="col-12 col-sm-6">{{well.Clearinghouse}}</div>
                                         <div class="col-12 col-sm-6 label"><strong>Site Name: </strong></div>
                                         <div class="col-12 col-sm-6">{{well.SiteName}}</div>
                                         <div class="col-12 col-sm-6 label"><strong>Site Number: </strong></div>
