--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -68,6 +68,12 @@
                     <div class="card">
                         <div class="card-header">
                             Contact Information
+                            <div class="float-right">
+                                <a class="btn btn-zybach btn-sm float-right"
+                                    routerLink="/wells/{{well.WellRegistrationID}}/edit-contact">
+                                    <span class="fas fa-edit"></span> Edit
+                                </a>
+                            </div>
                         </div>
                         <div class="card-body">
                             <div class="row" *ngIf="well">
@@ -155,6 +161,12 @@
                     <div class="card">
                         <div class="card-header">
                             Program Participation
+                            <div class="float-right">
+                                <a class="btn btn-zybach btn-sm float-right"
+                                    routerLink="/wells/{{well.WellRegistrationID}}/edit-participation">
+                                    <span class="fas fa-edit"></span> Edit
+                                </a>
+                            </div>
                         </div>
                         <div class="card-body">
                             <div class="row" *ngIf="well">
