--- a/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
@@ -48,6 +48,13 @@
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
+                    <label><strong>Nickname: </strong></label>
+                </div>
+                <div class="col-6 text-left mb-2">
+                    <input type="text" class="form-control" name="Nickname" [(ngModel)]="inspection.InspectionNickname" />
+                </div>
+
+                <div class="col-6 control-label text-right mb-2">
                     <label><strong>Temperature: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
