fixing breadcrumb link to permit page

--- a/Source/Zybach.Web/src/app/pages/chemigation-inspection-edit/chemigation-inspection-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-inspection-edit/chemigation-inspection-edit.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/chemigation-permits">Chemigation Permits</a>
         </li>
         <li class="breadcrumb-item">
-            <a routerLink="/chemigation-permits/{{chemigationPermitNumberDisplay}}">
+            <a routerLink="/chemigation-permits/{{chemigationPermitNumber}}">
                 Chemigation Permit #{{chemigationPermitNumber}}
             </a>
         </li>
