--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -70,7 +70,7 @@
                             Contact Information
                             <div class="float-right">
                                 <a class="btn btn-zybach btn-sm float-right"
-                                    routerLink="/wells/{{well.WellRegistrationID}}/edit-contact">
+                                    routerLink="/wells/{{well?.WellRegistrationID}}/edit-contact">
                                     <span class="fas fa-edit"></span> Edit
                                 </a>
                             </div>
@@ -163,7 +163,7 @@
                             Program Participation
                             <div class="float-right">
                                 <a class="btn btn-zybach btn-sm float-right"
-                                    routerLink="/wells/{{well.WellRegistrationID}}/edit-participation">
+                                    routerLink="/wells/{{well?.WellRegistrationID}}/edit-participation">
                                     <span class="fas fa-edit"></span> Edit
                                 </a>
                             </div>
