--- a/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
@@ -53,16 +53,22 @@
                                         </ng-select>
                                     </div>
 
-                                    <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Owner Name: </strong></label>
-                                    </div>
-                                    <div class="col-6 text-left mb-2">
-                                        <input type="text" class="form-control" name="OwnerName"
-                                        [(ngModel)]="wellContactInfo.OwnerName" placeholder="Full Name" />
+                                    <hr class="col-12 w-80 mt-2" />
+
+                                    <div class="col-12 text-center mb-2">
+                                        <h5 class="d-inline-block">Owner Contact Details</h5>
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Owner Address: </strong></label>
+                                        <label><strong>Name or Company: </strong></label>
+                                    </div>
+                                    <div class="col-6 text-left mb-2">
+                                        <input type="text" class="form-control" name="OwnerName"
+                                        [(ngModel)]="wellContactInfo.OwnerName" placeholder="Last, First" />
+                                    </div>
+
+                                    <div class="col-6 control-label text-right mb-2">
+                                        <label><strong>Address: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="OwnerAddress"
@@ -70,7 +76,7 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Owner City: </strong></label>
+                                        <label><strong>City: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="OwnerCity"
@@ -78,7 +84,7 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Owner State: </strong></label>
+                                        <label><strong>State: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <ng-select [(ngModel)]="wellContactInfo.OwnerState"
@@ -88,12 +94,14 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Owner Zip: </strong></label>
+                                        <label><strong>Zip: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="OwnerZipCode"
                                             placeholder="Zip Code" [(ngModel)]="wellContactInfo.OwnerZipCode" />
                                     </div>
+
+                                    <hr class="col-12 w-80 mt-2" />
 
                                     <div class="col-6 control-label text-right mb-2">
                                         <label><strong>Well Nickname: </strong></label>
@@ -116,16 +124,20 @@
                     
                                 <div class="row col-6">
 
-                                    <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Additional Contact Name: </strong></label>
-                                    </div>
-                                    <div class="col-6 text-left mb-2">
-                                        <input type="text" class="form-control" name="AdditionalContactName"
-                                        [(ngModel)]="wellContactInfo.AdditionalContactName" placeholder="Full Name" />
+                                    <div class="col-12 text-center mb-2">
+                                        <h5 class="d-inline-block">Additional Contact Details</h5>
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Additional Contact Address: </strong></label>
+                                        <label><strong>Name: </strong></label>
+                                    </div>
+                                    <div class="col-6 text-left mb-2">
+                                        <input type="text" class="form-control" name="AdditionalContactName"
+                                        [(ngModel)]="wellContactInfo.AdditionalContactName" placeholder="Last, First" />
+                                    </div>
+
+                                    <div class="col-6 control-label text-right mb-2">
+                                        <label><strong>Address: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="AdditionalContactAddress"
@@ -133,7 +145,7 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Additional Contact City: </strong></label>
+                                        <label><strong>City: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="AdditionalContactCity"
@@ -141,7 +153,7 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Additional Contact State: </strong></label>
+                                        <label><strong>State: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <ng-select [(ngModel)]="wellContactInfo.AdditionalContactState"
@@ -151,7 +163,7 @@
                                     </div>
 
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Additional Contact Zip: </strong></label>
+                                        <label><strong>Zip: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
                                         <input type="text" class="form-control" name="AdditionalContactZipCode"
