--- a/Source/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
@@ -56,7 +56,7 @@
                                     </div>
                                     
                                     <div class="col-6 control-label text-right mb-2">
-                                        <label><strong>Requires Chemigation?: </strong></label>
+                                        <label><strong>Requires Chemigation Inspection?: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2 form-group">
                                         <div class="input-group">
