--- a/Source/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
@@ -83,15 +83,15 @@
                                         </div>
                                     </div>
                     
-                                    <!-- <div class="col-6 control-label text-right mb-2">
+                                    <div class="col-6 control-label text-right mb-2">
                                         <label><strong>Water Quality Inspection Type: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
-                                        <ng-select [(ngModel)]="wellParticipationInfo.WellUseID"
-                                            [items]="wellUses" bindLabel="WellUseDisplayName" bindValue="WellUseID" 
-                                            placeholder="Choose One" name="WellUseID">
+                                        <ng-select [(ngModel)]="wellParticipationInfo.WaterQualityInspectionTypeID"
+                                            [items]="waterQualityInspectionTypes" bindLabel="WaterQualityInspectionTypeDisplayName" bindValue="WaterQualityInspectionTypeID" 
+                                            placeholder="Choose One" name="WaterQualityInspectionTypeID">
                                         </ng-select>
-                                    </div> -->
+                                    </div>
                                     
                                 </div>
                     
