moved water quality inspection types to a multi-select on participation details editor for well

--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -185,7 +185,7 @@
 
                         <div class="row col-12">
                             <div class="col-6 text-right">
-                                <p><strong>HCO<sub>3-</sub>: </strong></p>
+                                <p><strong>HCO<sub>3</sub><sup>-</sup>: </strong></p>
                             </div>
                             <div class="col-6 text-left">
                                 <p>
@@ -196,7 +196,7 @@
 
                         <div class="row col-12">
                             <div class="col-6 text-right">
-                                <p><strong>CaCO<sub>3-</sub>: </strong></p>
+                                <p><strong>CaCO<sub>3</sub>: </strong></p>
                             </div>
                             <div class="col-6 text-left">
                                 <p>
