--- a/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
@@ -30,9 +30,9 @@
                 <div class="card-body">
                     <form (ngSubmit)="onSubmit(editWellContactForm)" #editWellContactForm="ngForm" class="container">
                     
-                        <div class="row col-12 mt-4">
+                        <div class="row col-12 mt-2">
 
-                            <div class="row col-12">
+                            <div class="row col-12 mb-3">
                                 <div class="row col-6">
                                     <div class="col-12 text-center mb-2">
                                         <h5 class="d-inline-block">Owner Contact Details</h5>
