--- a/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
@@ -182,7 +182,7 @@
 
                 <div class="row col-12">
                     <div class="col-6 control-label text-right mb-2">
-                        <label><strong>CaCO<sub>3-</sub>: </strong></label>
+                        <label><strong>CaCO<sub>3</sub>: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
                         <input type="number" step="0.0001" class="form-control" name="CalciumCarbonate" [(ngModel)]="inspection.CalciumCarbonate" />
