finished clearinghouse WQI report grid

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -86,6 +86,9 @@
                     <a routerLink="/reports/chemigation-permit-reports" class="dropdown-item">
                         Chemigation Permit Reports
                     </a>
+                    <a routerLink="reports/clearinghouse-report" class="dropdown-item">
+                        Clearinghouse Report
+                    </a>
                     <a routerLink="/reports/ndee-report" class="dropdown-item">
                         NDEE Chemicals Report
                     </a>
