--- a/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -1,4 +1,4 @@
-<label class="rowHeader">Registration #:</label> <a routerLink="/wells/{{registrationID}}">{{registrationID}}</a><br/>
+<label class="rowHeader">Registration #:</label> <a routerLink="/wells/{{wellID}}">{{wellRegistrationID}}</a><br/>
 
 <label class="rowHeader">AgHub Registered User:</label>{{AgHubRegisteredUser}}
 <br/>
