--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -17,7 +17,7 @@
                             Basics
                             <div class="float-right">
                                 <a [ngClass]="{'btn': true, 'btn-zybach': true, 'btn-sm': true, 'float-right': true, 'disabled': isInAgHubOrGeoOptix}"
-                                    routerLink="/wells/{{well?.WellRegistrationID}}/edit-registration-id">
+                                    routerLink="/wells/{{wellID}}/edit-registration-id">
                                     <span class="fas fa-edit"></span> Edit Reg. ID
                                 </a>
                             </div>
@@ -76,7 +76,7 @@
                             Contact Information
                             <div class="float-right">
                                 <a class="btn btn-zybach btn-sm float-right"
-                                    routerLink="/wells/{{well?.WellRegistrationID}}/edit-contact">
+                                    routerLink="/wells/{{wellID}}/edit-contact">
                                     <span class="fas fa-edit"></span> Edit
                                 </a>
                             </div>
@@ -169,7 +169,7 @@
                             Program Participation
                             <div class="float-right">
                                 <a class="btn btn-zybach btn-sm float-right"
-                                    routerLink="/wells/{{well?.WellRegistrationID}}/edit-participation">
+                                    routerLink="/wells/{{wellID}}/edit-participation">
                                     <span class="fas fa-edit"></span> Edit
                                 </a>
                             </div>
