--- a/Source/Zybach.Web/src/app/pages/well-map-popup/well-map-popup.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-map-popup/well-map-popup.component.html
@@ -3,7 +3,7 @@
         <tr>
             <td class="rowHeader">Registration #:</td>
             <td class="rowValue"><a
-                    routerLink="/wells/{{registrationID}}">{{registrationID}}</a>
+                    routerLink="/wells/{{wellID}}">{{wellRegistrationID}}</a>
             </td>
         </tr>
         <tr *ngIf="AgHubRegisteredUser">
