--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/water-quality-inspections">Water Quality Inspections</a>
         </li>
         <li class="breadcrumb-item" aria-current="page">
-            <a routerLink="/wells/{{waterQualityInspection.Well.WellRegistrationID}}">Well #{{waterQualityInspection.Well.WellRegistrationID}}</a>
+            <a routerLink="/wells/{{waterQualityInspection.Well.WellID}}">Well #{{waterQualityInspection.Well.WellRegistrationID}}</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
             {{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}
@@ -18,7 +18,7 @@
     </div>
     <div class="row container" *ngIf="waterQualityInspection">
         <div class="col-12 col-sm-6 label"><strong>Well: </strong></div>
-        <div class="col-12 col-sm-6"><a *ngIf="waterQualityInspection.Well" routerLink="/wells/{{waterQualityInspection.Well.WellRegistrationID}}">{{waterQualityInspection.Well.WellRegistrationID}}</a></div>
+        <div class="col-12 col-sm-6"><a *ngIf="waterQualityInspection.Well" routerLink="/wells/{{waterQualityInspection.Well.WellID}}">{{waterQualityInspection.Well.WellRegistrationID}}</a></div>
         <div class="col-12 col-sm-6 label"><strong>Inspected By: </strong></div>
         <div class="col-12 col-sm-6"><a *ngIf="waterQualityInspection.Inspector" routerLink="/users/{{waterQualityInspection.Inspector.UserID}}">{{waterQualityInspection.Inspector.FullNameLastFirst}}</a></div>
         <div class="col-12 col-sm-6 label"><strong>Inspection Type: </strong></div>
