--- a/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-contact-edit/well-contact-edit.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/well-map">Wells</a>
         </li>
         <li class="breadcrumb-item">
-            <a routerLink="/wells/{{wellRegistrationID}}">{{wellRegistrationID}}</a>
+            <a routerLink="/wells/{{wellID}}">{{wellRegistrationID}}</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
             Edit Contact Details for Well {{wellRegistrationID}}
@@ -183,7 +183,7 @@
                                 Save
                             </button>
                             <a class="btn btn-secondary ml-1"
-                                routerLink="/wells/{{wellRegistrationID}}">
+                                routerLink="/wells/{{wellID}}">
                                 Cancel
                             </a>
                         </div>
