fixing the well search to return WellIDs instead of WellRegistrationIDs made map component reinitializable in well detail

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -157,7 +157,7 @@
                             Location
                         </div>
                         <div class="card-body">
-                            <div id="{{mapID}}" style="height:300px;"></div>
+                            <div #wellLocation style="height:300px;"></div>
                         </div>
                     </div>
                 </div>                
